Decouple layer / index / encoder discovery